minishift/templates/nexus/deploy/deploymentconfig-nexus.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: nexus
  name: nexus
  namespace: intygstjanster-test
spec:
  replicas: 1
  selector:
    app: nexus
    deploymentconfig: nexus
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: nexus
        deploymentconfig: nexus
    spec:
      containers:
      - env:
        - name: CONTEXT_PATH
          value: /
        - name: INSTALL4J_ADD_VM_PARAMS
          value: -Xms1200m -Xmx1200m -Djava.util.prefs.userRoot=/nexus-data/
        image: ' '
        imagePullPolicy: IfNotPresent
        livenessProbe:
          exec:
            command:
            - echo
            - ok
          failureThreshold: 3
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: nexus
        ports:
        - containerPort: 8081
          protocol: TCP
        - containerPort: 5000
          protocol: TCP
          name: docker
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: 8081
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            memory: 2Gi
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /var/lib/nexus
          name: nexus-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: nexus-data
        persistentVolumeClaim:
          claimName: nexus-storage-claim
  test: false
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - nexus
      from:
        kind: ImageStreamTag
        name: nexus:3.2.1
    type: ImageChange
status: {}
