minishift/templates/nexus/deploy/service-nexus.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nexus
  name: nexus
  namespace: intygstjanster-test
spec:
  ports:
  - name: 8081-tcp
    port: 8081
    protocol: TCP
    targetPort: 8081
  selector:
    deploymentconfig: nexus
  sessionAffinity: None
  type: ClusterIP
